<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditareStergereCursaActivity"
    android:id="@+id/activitate_editareStergereCursa">

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jffont"
        android:text="@string/text_megacar"
        android:textColor="@color/colorWhite"
        android:textSize="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_editare_stergere_cursa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_detalii_cursa"
        android:gravity="center"
        android:textColor="@color/colorContrastDarkBlue"
        android:layout_marginTop="20dp"
        android:layout_marginStart="-30dp"
        android:layout_marginEnd="80dp"
        android:textSize="30dp"
        android:background="@drawable/btn_back"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_name"
        android:layout_marginLeft="-30dp"
        android:layout_marginRight="80dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_editare_stergere_cursa">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_editare_stergere_cursa_plecare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_locatie_de_plecare" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_editare_stergere_cursa_destinatie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_locatie_de_destinatie"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_editare_stergere_cursa_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_editare_stergere_cursa_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_data"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_editare_stergere_cursa_ora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_editare_stergere_cursa_data">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_editare_stergere_cursa_ora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_hh_mm"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_editare_stergere_cursa_ora">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_editare_stergere_cursa_durata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_durata_minute"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_editare_cursa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_back"
        android:clickable="true"
        android:text="@string/text_modifica"
        android:textColor="@color/colorDarkBlue"
        app:layout_constraintEnd_toStartOf="@id/btn_stergere_cursa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btn_stergere_cursa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_back"
        android:clickable="true"
        android:text="@string/text_sterge"
        android:textColor="@color/colorDarkBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_editare_cursa"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>